--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="ui_size_25">25dp</dimen>
+    <dimen name="ui_size_16">16dp</dimen>
     <dimen name="ui_size_4">4dp</dimen>
+    <dimen name="ui_size_200">200dp</dimen>
+    <dimen name="ui_size_10">10dp</dimen>
 </resources>
