--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.glliao.catandorid.MainActivity"
+    tools:context="com.example.glliao.catandorid.activity.MainActivity"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
@@ -32,7 +32,8 @@
         android:hint="User Name"
         android:layout_marginTop="87dp"
         android:layout_width="246dp"
-        android:layout_height="50dp" />
+        android:layout_height="50dp"
+        android:singleLine="true" />
 
     <EditText
         android:id="@+id/password"
@@ -44,7 +45,8 @@
         android:hint="Password"
         android:layout_marginTop="53dp"
         android:layout_width="246dp"
-        android:layout_height="50dp" />
+        android:layout_height="50dp"
+        android:singleLine="true"/>
 
     <Button
         android:background="@drawable/login_btn_bg_selector"
