--- a/app/src/main/res/drawable/dot_bg_white.xml
+++ b/app/src/main/res/drawable/dot_bg_white.xml
@@ -2,5 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="@color/colorWhite" />
-    <size android:height="@dimen/ui_size_16" android:width="@dimen/ui_size_16" />
+    <size
+        android:height="6dp"
+        android:width="6dp" />
 </shape>
