--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlueGreen">#5cd6d6</color>
     <color name="colorBlueGreenDark">#33cccc</color>
+    <color name="colorPaleGray">#F0F0F0</color>
+    <color name="gray">#CCCCCC</color>
 </resources>
