--- a/app/src/main/res/drawable/tab_left_bg_enabled.xml
+++ b/app/src/main/res/drawable/tab_left_bg_enabled.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorBlueGreen" />
+    <solid android:color="@color/colorPaleGray" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/colorBlueGreen" />
     <corners
         android:bottomLeftRadius="@dimen/ui_size_4"
         android:topLeftRadius="@dimen/ui_size_4" />
