--- a/app/src/main/res/layout/fragment_near_by.xml
+++ b/app/src/main/res/layout/fragment_near_by.xml
@@ -6,6 +6,8 @@
     <ListView
         android:id="@+id/near_by_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:divider="@color/colorPaleGray"
+        android:dividerHeight="@dimen/ui_size_16" />
 
 </FrameLayout>
