--- a/app/src/main/res/layout/my_cat_list_item.xml
+++ b/app/src/main/res/layout/my_cat_list_item.xml
@@ -2,11 +2,54 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <TextView
-        android:id="@+id/content"
-        android:layout_width="match_parent"
-        android:layout_height="40dp" />
+    android:layout_height="150dp"
+    android:orientation="horizontal">
+
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/ui_size_10"
+        android:paddingRight="@dimen/ui_size_10"
+        android:src="@mipmap/icon" />
+
+    <LinearLayout
+        android:layout_weight="5"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_margin="@dimen/ui_size_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Kitty" />
+
+        <TextView
+            android:layout_margin="@dimen/ui_size_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Post some new pictiures." />
+
+        <LinearLayout
+            android:layout_margin="@dimen/ui_size_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:paddingRight="@dimen/ui_size_16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/cata" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/catc" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
